--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -300,12 +300,14 @@ hr {
             font-size: 2em;
             font-weight: 200;
             margin: 1em 21px 30px 21px;
+            padding-left: 4px;
         }
         .hero-text .btn.btn-grey {
             -webkit-box-sizing: border-box;
             -moz-box-sizing: border-box;
             box-sizing: border-box;
-            padding-left: 30px;
+            padding-left: 38px;
+            max-width: 325px;
             width: 85%;
         }
   	.hero-video {
@@ -374,6 +376,8 @@ hr {
         height: 32px !important;
         margin: 0 !important;
         width: 70%;
+        font-weight: 200;
+        transition: all 75ms;
     }
     #newsletterEmail:focus {
         outline-color: #56b4d7;
@@ -617,6 +621,7 @@ form {}
         }
 	.footer-address {
 		margin-bottom: 25px;
+        list-style: none;
 	}
     #global-footer .wrapper:last-child {
         background: rgba(255,255,255,0.4);
@@ -642,6 +647,7 @@ form {}
         font-size: 3em;
         position: relative;
         top: 9px;
+        line-height: 0px;
     }
     .btn-directions:hover {
         text-decoration: none;
@@ -672,15 +678,6 @@ article {
 /*==================================================================
 =Forms
 ----------------------------------------------------------------- */
-
-.text {
-	line-height: 26px;
-	padding: 0 5px;
-	margin-right: 5px;
-    height: 26px;
-}
-
-
 
 /*==================================================================
 =Buttons
