--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -151,11 +151,6 @@ article h1, .content h1 {
 ----------------------------------------------------------------- */
 
 body {
-    /*background: #fff url(../images/background.png);
-    background-size: 120%;
-    background-position: 0px -100px;
-    background-repeat: repeat-x;
-    z-index: 1;*/
     background: #fff url(../images/gplaypattern-blue.jpg);
 }
 
@@ -218,8 +213,9 @@ hr {
     .logo-practice {
         margin: 0;
         padding: 0;
-        position: relative;
-        top: 57px;
+        position: absolute;
+        top: 100px;
+        right: 0px;
         padding-right: 21px;
         float: right;
         width: 245px;
@@ -239,14 +235,13 @@ hr {
     }
 
     .btn-grey.show-nav {
-        height: 30px;
         box-sizing: border-box;
+        -moz-box-sizing: border-box;
         width: 80px;
         padding: 5px;
         text-align: center;
     }
     .btn-grey.show-nav:after {
-        height: 0px;
         border-bottom: 30px solid transparent;
     }
 
@@ -278,7 +273,6 @@ hr {
 		}
 
 #main {
-    /*background-color: #fff;*/
     overflow: hidden;
 }
 
@@ -362,51 +356,7 @@ hr {
         word-spacing: .15em;
         line-height: 1.5em;
     }
-	#newsletterForm {
-		clear: both;
-        width: 100%;
-        box-sizing: border-box;
-	}
-    #newsletterEmail {
-        box-sizing: border-box;
-        background: #f7f7f7;
-        color: #767676;
-        border: none;
-        padding: .6em !important;
-        height: 32px !important;
-        margin: 0 !important;
-        width: 70%;
-        font-weight: 200;
-        transition: all 75ms;
-    }
-    #newsletterEmail:focus {
-        outline-color: #56b4d7;
-    }
-    #newsletterForm button {
-        background: #58b7da;
-        position: relative;
-        display: inline-block;
-        margin: 0 !important;
-        color: white;
-        left: -8px;
-        top: -1px;
-        height: 32px;
-        border: none !important;
-        padding: 0 01em;
-        max-width: 25%;
-    }
-    #newsletterForm button:hover {
-        color: #06e;
-    }
-    #newsletterForm button:after {
-        content:"";
-        position:absolute;
-        top:0;
-        left:100%;
-        width: 0;
-        height: 0;
-        border-bottom: 32px solid transparent;
-    }
+	
 
 .bagallery.content-box {
     border: none;
@@ -539,63 +489,6 @@ hr {
         margin-top: 40px;
     }
 
-form {}
-    form ul {
-        margin: 0;
-        padding: 0;
-    }
-    form li {
-        list-style: none;
-        padding: 0;
-    }
-    form li label {
-        display: block;
-        font-weight: bold;
-        color: #333;
-        font-size: 15px;
-        margin-bottom: 6px;
-    }
-    form li .text {
-        width: 95%;
-        margin-bottom: 17px;
-        border: 1px solid #d5d5d5;
-        max-width: 458px;
-    }
-
-    .dropdown .text {
-        line-height: 27px;
-        background: url(../images/bg-dropdown.png) no-repeat right 2px;
-    }
-    .checksingle .text {
-        float: left;
-        margin-right: 9px;
-        width: 15px;
-    }
-    .checksingle label {
-        line-height: 27px;
-        font-weight: normal;
-    }
-    .checkbox {
-        margin: 6px 10px 5px 0;
-        float: left;
-    }
-    .checkboxtall {
-        margin-bottom: 15px;
-    }
-    form input.error {
-        background-color: #f0dddd;
-    }
-
-.newsletter-form {
-    margin-bottom: 25px;
-}
-    .newsletter-form .text {
-        width: 60%;
-    }
-    .newsletter-form input {
-        float: left;
-    }
-
 .about-slides {
     margin-bottom: 25px;
 }
@@ -621,6 +514,7 @@ form {}
         }
 	.footer-address {
 		margin-bottom: 25px;
+        padding: 0px;
         list-style: none;
 	}
     #global-footer .wrapper:last-child {
@@ -678,6 +572,183 @@ article {
 /*==================================================================
 =Forms
 ----------------------------------------------------------------- */
+
+#consultForm {
+}
+    #consultForm li span {
+        font-size: .67em;
+        color: red;
+        position: relative;
+        bottom: 5px;
+        left: 5px;
+        opacity: 0.8;
+    }
+    #consultForm input,
+    #consultForm button,
+    #consultForm textarea {
+        background: #f7f7f7;
+        border: none;
+        padding: 0 5px;
+    }
+    #consultForm input {
+        height: 2em;
+        width: 100%;
+    }
+    #consultForm [class^="checks"] label { /*If className begins with "checks", this matches */
+        color: #666;
+    }
+    .checksplit input,
+    .checksingle input {
+        width: auto !important;
+    }
+    #consultForm label {
+        color: #199acb;
+        font-weight: 200;
+        font-size: 1.5em;
+    }
+    #consultForm button {
+        background: #58b7da;
+        display: inline-block;
+        margin: 0 !important;
+        color: white;
+        height: 32px;
+        border: none !important;
+        padding: 0 01em;
+        max-width: 25%;
+    }
+    #consultForm button:hover {
+        color: #06e;
+    }
+    #consultForm button:after {
+        border-bottom: 32px solid transparent;
+        content:"";
+        height: 0;
+        width: 0;
+    }
+
+form {}
+    form ul {
+        margin: 0;
+        padding: 0;
+    }
+    form li {
+        list-style: none;
+        padding: 0;
+    }
+    form li label {
+        margin-bottom: 6px;
+        font-weight: bold;
+        font-size: 15px;
+        display: block;
+        color: #333;
+    }
+    input[type="checkbox"] {
+        margin: 0 5px 0 0;
+        float: left;
+    }
+    form input.error {
+        background-color: #f0dddd;
+    }
+
+.newsletter-form {
+    margin-bottom: 25px;
+}
+    .newsletter-form .text {
+        width: 60%;
+    }
+    .newsletter-form input {
+        float: left;
+    }
+    #newsletterForm {
+        clear: both;
+        width: 100%;
+        box-sizing: border-box;
+    }
+    #newsletterEmail {
+        text-transform: lowercase;
+        padding: .6em !important;
+        height: 32px !important;
+        box-sizing: border-box;
+        margin: 0 !important;
+        transition: all 75ms;
+        background: #f7f7f7;
+        max-width: 300px;
+        font-weight: 200;
+        color: #767676;
+        border: none;
+        width: 70%;
+    }
+    #newsletterEmail:focus {
+        outline-color: #56b4d7;
+    }
+    #newsletterForm button {
+        border: none !important;
+        display: inline-block;
+        margin: 0 !important;
+        background: #58b7da;
+        position: relative;
+        padding: 0 01em;
+        max-width: 35%;
+        color: white;
+        height: 32px;
+        left: -8px;
+        top: -1px;
+    }
+    #newsletterForm button:hover {
+        color: #06e;
+    }
+    #newsletterForm button:after {
+        border-bottom: 32px solid transparent;
+        position:absolute;
+        content:"";
+        left:100%;
+        width: 0;
+        height: 0;
+        top:0;
+    }
+
+/*==================================================================
+=Interior Pages
+----------------------------------------------------------------- */
+
+.interior .wrapper {
+    padding: 0 22px;
+}
+.interior #global-header {
+    height: 9em;
+}
+
+.consultation {}
+    .consultation .logo-coolsculpting {
+        background: transparent;
+    }
+    .consultation #main .wrapper, .consultation #global-header {
+        background-color: #fff;
+    }
+    .consultation #main:after {
+        display: block;
+        height: 100px;
+        width: 100%;
+        content: "";
+
+        background: transparent !important;
+        background-image: -webkit-gradient(linear, center top, center bottom, from(white), to(rgba(255,255,255,0))) !important;
+    }
+    .consultation .wrapper h1 {
+        color: #528295;
+        font-weight: 200;
+        font-size: 3em;
+        line-height: 1.25em;
+    }
+.interior .content-box {
+    background: url(/assets/images/content-box.png) no-repeat;
+    padding: 20px 20px 20px 25px;
+}
+.interior aside.onethird {
+    position: relative;
+    left: -22px;
+    margin-top: 45px;
+}
 
 /*==================================================================
 =Buttons
